# sphinx-scylladb-theme

./: .eslintrc.yml  .flake8  .gitignore  .lycheeignore  .postcss.config.js  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .ruff.toml  404.html  CHANGELOG.md  CNAME  Gemfile  LICENSE  Makefile  PYPI.rst  README.md  README.rst  _config.yml  amplify.yml  conf.py  contribute.rst  deploy.sh  eslint.config.js  faq.rst  glossary.rst  headings.rst  index.html  index.md  index.rst  netlify.toml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yaml  dependabot.yml
Utils/: linkcheck
_ext/: _utils.py  topic-box.py
_includes/: bodyscripts.html  cassandra-vs-scylla-benchmark-chart.html  chartscripts.html  doc-side-nav.html  download-registration.html  footer.html  head.html  kb-menu.html  logo.html  newsletter-registration.html  scylla-vs-cassandra-data-1.html  scylla-vs-cassandra-data-2.html  scylla-vs-cassandra-data-cluster-1.html  side-nav-with-search.html  subpage-list.html  top-nav.html
_layouts/: doc.html  page-narow.html  page.html  post.html  section-page.html  tech.html  toc-left.html
_static/: custom.css  doc.css
_templates/: layout.html  side-nav.html
_utils/: cql.py  preview  preview.sh  redirections.yaml  setup.sh
architecture/: architecture-fault-tolerance.rst  console_CL_full_demo.rst  index.rst
branch-1.0/: .buildinfo  commands.html  genindex.html  github-pages.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
branch-1.1/: .buildinfo  commands.html  genindex.html  github-pages.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
branch-1.2/: .buildinfo  commands.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
branch-1.3/: commands.html  genindex.html  index.html  search.html
config/: paths.js  webpack.common.js  webpack.dev.js  webpack.prod.js
css/: site.css  wufoo.css
doc/: index.html
docs/: Makefile
download/: index.html
getting-started/: appendices.rst  compaction.rst  cql.rst  cqlsh.rst  ddl.rst  definitions.rst  dml.rst  functions.rst  getting-started.rst  index.rst  json.rst  logging.rst  mv.rst  non-reserved_keywords.rst  os-support.rst  requirements.rst  reserved_keywords.rst  scylla_drivers.rst  scylla_in_a_shared_environment.rst  secondary_indexes.rst  system-requirements.rst  types.rst
js/: app.js  registration-form.js
kb/: compaction.rst  cqlsh-more.rst  decode-stack-trace.rst  disk-utilization.rst  flamegraph.rst  gossip.rst  index.rst  map-cpu.rst  ntp.rst  os-support.rst  posix.rst  quiz-administrators.rst  scylla-and-spark-integration.rst  snapshots.rst  social-reader.rst  unresponsive-nodes.rst  use-perf.rst  yaml-address.rst
master/: .buildinfo  commands.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
operating-scylla/: admin.rst  benchmarking-scylla.rst  index.rst  nodetool.rst  runtime-authentication.rst  scylla-yaml.rst
rst_include/: configure-index.rst  cql-index.rst  cql-version-index.rst  scylla-commands-restart-index.rst  scylla-commands-start-index.rst  scylla-commands-status-index.rst  scylla-commands-stop-index.rst  scylla-tools-index.rst  troubleshooting-index.rst  warning-ttl-twcs.rst
scylla-cloud/: index.rst  xaws-account.rst
sphinx_scylla_theme/: __init__.py  layout.html  searchbox.html  side-nav.html  theme.conf
sphinx_scylladb_theme/: 404.html  __init__.py  _version.py  alert.html  banner.html  breadcrumbs.html  content-navigation.html  contribute.html  custom-scripts.html  feedback.html  footer.html  header.html  last-updated.html  layout.html  local-scripts.html  notice.html  searchbox.html  (+11 more)
(+1067 files in other folders)
