[project]
name = "sphinx-scylladb-theme"
version = "1.9.2"
description = "A Sphinx Theme for ScyllaDB documentation projects"
authors = [{name = "David García", email = "david@techdocs.studio"}]
readme = "PYPI.rst"
requires-python = ">=3.11"
dependencies = [
    "sphinx-collapse>=0.1.4,<0.2",
    "sphinx-copybutton>=0.5.2,<0.6",
    "beautifulsoup4>=4.12.3,<5",
    "sphinx-tabs>=3.4.5,<4",
    "pyyaml>=6.0.1,<7",
    "Sphinx-Substitution-Extensions>=2022.2.16,<2027.0.0",
    "sphinx-notfound-page>=1.0.4,<2",
    "setuptools>=70.1.1,<83.0.0",
    "sphinxcontrib-mermaid>=1,<3",
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
sphinx-autobuild = "^2024.10.3"
pre-commit = "^4.5.0"
myst-parser = "^4.0.1"
sphinx-multiversion-scylla = "^0.3.6"
sphinx-sitemap = "^2.8.0"
redirects_cli ="^0.1.3"
breathe = "^4.36.0"


[dependency-groups]
dev = [
    "sphinx>=9.0",
    "docutils<0.22",  # pin until sphinx-tabs releases a fix for KeyError: 'backrefs' (executablebooks/sphinx-tabs#212)
    "pytest>=9.0.1",
    "sphinx-autobuild>=2025.08.25",
    "pre-commit>=4.5.0",
    "myst-parser>=5.0.0",
    "sphinx-multiversion-scylla>=0.3.5",
    "sphinx-sitemap>=2.8.0,<3",
    "redirects_cli>=0.1.3,<0.2",
    "breathe>=4.36.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["sphinx_scylladb_theme/"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
    "config/",
    "docs/",
    "/extensions/",
    ".postcss.config.js",
    ".prettierrc.json",
    "deploy.sh",
    "src/",
    "package.json",
    "package-lock.json",
]
